tests/wpt/tests/third_party/test262/test/language/statements/with/strict-fn-decl-nested-1.js
// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
es5id: 12.10.1-2-s
description: >
  with statement in strict mode throws SyntaxError (nested function where
  container is strict)
negative:
  phase: parse
  type: SyntaxError
flags: [noStrict]
---*/

$DONOTEVALUATE();

function foo() {
  'use strict';
  function f() {
    var o = {};
    with (o) {};
  }
}
